--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
   color: #333;
 }
 
+img {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+}
+
 /* Whole Container */
 #container {
   height: auto;
@@ -546,6 +552,7 @@ div.dashboard-panel-head {
 .column p {
   margin:1em 0;
   padding:0;
+  overflow:hidden;
 }
 
 .column > div {
@@ -569,10 +576,7 @@ div.dashboard-panel-head {
 .column a.image {
   display:block;
   float:right;
-  width: 50px;
-  height:50px;
-  overflow:hidden;
-  border: 5px solid rgba(0,0,0,0.1);
+  width: 100px;
   margin-left: 5px;
   margin-bottom: 5px;
 }
