--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ tr.even, tr.odd {
 
   #courtesy-bar ul {
     margin: 0 20px 0 0;
-    display: table;
+    display: inline;
     float: right;
     font-size: 12px;
     line-height: 4em;
