--- a/style.css
+++ b/style.css
@@ -157,14 +157,19 @@ tr.even, tr.odd {
     padding:0;
     display: inline;
   }
-  #courtesy-bar ul li:not(:last-child):after {
+  #courtesy-bar ul li + li:before {
     content: " · ";
     color: #999;
   }
-  #courtesy-bar ul li a {
-    margin:0;
-    color: rgba(255, 255, 255, 0.7);
+  #courtesy-bar a:link,
+  #courtesy-bar a:visited {
+    color: #ddd;
   }
+  #courtesy-bar a:hover,
+  #courtesy-bar a:active {
+    color: #fafafa;
+  }
+
 #courtesy-bar form,
 #courtesy-bar form div {
   display:inline;
